force-app/main/default/objects/Contact/fields/ContactType__c.field-meta.xml
<CustomField>
    <fullName>ContactType__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Worker</fullName>
            </value>
            <value>
                <fullName>Survey Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>