force-app/main/default/objects/Contact/fields/GRMS_LoginEmail__c.field-meta.xml
<CustomField>
    <fullName>GRMS_LoginEmail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Email address of auth0 userfor grass roots mobile survey app.</description>
    <inlineHelpText>Email address of auth0 user for grass roots mobile survey app.</inlineHelpText>
    <label>Login Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>