force-app/main/default/objects/Contact/fields/GRSM_LoginEmail__c.field-meta.xml
<CustomField>
    <fullName>GRSM_LoginEmail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Email address of auth0 userfor grass roots survey mobile app.</description>
    <inlineHelpText>Email address of auth0 user for grass roots survey mobile app.</inlineHelpText>
    <label>Login Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>