force-app/main/default/objects/Contact/fields/LoginEmail__c.field-meta.xml
<CustomField>
    <fullName>LoginEmail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Email address of auth0 user (field worker) for grassroots mobile survey app.</description>
    <inlineHelpText>Email address of auth0 user (field worker) for grassroots mobile survey app.</inlineHelpText>
    <label>Login Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>