force-app/main/default/objects/Contact/recordTypes/GRMS_Client.recordType-meta.xml
<RecordType>
    <fullName>GRMS_Client</fullName>
    <active>true</active>
    <description>(Optional) Client of grassroots survey app</description>
    <label>Survey Client</label>
</RecordType>