force-app/main/default/objects/Contact/recordTypes/GRSM_Client.recordType-meta.xml
<RecordType>
    <fullName>GRSM_Client</fullName>
    <active>true</active>
    <description>(Optional) Client of grass roots survey app</description>
    <label>Survey Client</label>
</RecordType>