force-app/main/default/objects/Contact/recordTypes/GRSM_User.recordType-meta.xml
<RecordType>
    <fullName>GRSM_User</fullName>
    <active>true</active>
    <description>Users of grass roots survey mobile app</description>
    <label>Survey User</label>
</RecordType>